test/sema/typeck/binop/int32-equals-int-literal.dora
fn f(x: Int32): Bool { x == 0 }
